--- a/animatedreactjs/src/App.css
+++ b/animatedreactjs/src/App.css
@@ -103,3 +103,10 @@
     transform: translateY(-10px);
   }
 }
+.footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+} 
